@@ -1,6 +1,8 @@
 ver 0.23.7 (not yet released)
 * decoder
   - opus: fix missing song length on high-latency files
+* mixer
+  - software: update volume of disabled outputs
 
 ver 0.23.6 (2022/03/14)
 * protocol
